# manifesto

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CLAUDE_BUDGET_AND_CACHE_REDUCTION_ROADMAP.md  COMMIT_HEALTH_RUBRIC.md  CONSTRAINT_LOG.md  CONTEXT_METRICS.json  CONTEXT_PACKAGE_GUIDE.md  DECISIONS.md  GLOSSARY.md  MULTI_AGENT_WORKFLOW_REDESIGN_ROADMAP.md  NOTES_FOR_FUTURE.md  ORCHESTRATION.md  ORCHESTRATOR_CAVEATS.md  PROJECT_SUMMARY_HE.md  README.md  SMOKE_TEST_RESULTS.md  TASK_TO_COMMIT_PROTOCOL_GUIDE.md  TASK_TO_COMMIT_SYSTEM_IMPLEMENTATION_GUIDE.md  TOKEN_RECORDS.md  commit-protocol.md  constraint-dashboard.html  docker-compose.yml  manifesto-cowork-prompt.md  manifesto-spec.md  project-state.json  qa-pgadmin.md  team-preferences.md  test.txt  test2.txt  vendor-logistics-rag-pitch.pptx  workflow-optimization-report.md
backend/: DOMAIN_MAP.md  Dockerfile  alembic.ini  pyproject.toml  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_rag_storage_hardening.py  0003_purchase_order_storage.py  0004_shipment_lifecycle_fields.py  0005_shipment_event_storage.py  0006_client_shipment_items.py  0006_client_shipment_items_refactor.py  0007_add_status_reason.py
backend/app/: dependencies.py  main.py
backend/app/core/: config.py  redis.py  security.py
backend/app/data/: demo_policies.json
backend/app/models/: __init__.py  category.py  client.py  conversation.py  message.py  policy.py  product.py  purchase_order.py  shipment.py  shipment_event.py  user.py  (+2 more)
backend/tests/: conftest.py  test_config.py  test_seed.py
(+466 files in other folders)
