[project]
name = "manifesto"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pgvector>=0.2.0",
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
    "structlog>=24.1.0",
    "python-multipart>=0.0.9",
]
