[project]
name = "manifesto"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic-settings>=2.0.0",
    "PyJWT>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    "pgvector>=0.2.0",
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
    "structlog>=24.1.0",
    "python-multipart>=0.0.9",
    # Phase 2 — LLM provider runtime
    "openai>=1.30.0",       # official async OpenAI client
    "httpx>=0.27.0",        # pooled async HTTP client for Ollama
    "tiktoken>=0.7.0",      # tokenizer used by ingestion
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
